--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -4,12 +4,13 @@ services:
   db:
     image: postgres:13.0-alpine
     volumes:
-      - /var/lib/postgresql/data/
+      - db_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
   web:
-    build: .
-    restart: always
+    build:
+      dockerfile: ../api_yamdb/Dockerfile
+      context: ../api_yamdb
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
@@ -37,3 +38,4 @@ services:
 volumes:
   static_value:
   media_value:
+  db_data:
