--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -4,7 +4,6 @@ on: [push]
 
 jobs:
   tests:
-    if: ${{ false }}  # disable for now
     runs-on: ubuntu-latest
 
     steps:
@@ -27,7 +26,6 @@ jobs:
         # python -m pytest
 
   build_and_push_to_docker_hub:
-    if: ${{ false }}  # disable for now
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
@@ -54,19 +52,15 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    #needs: build_and_push_to_docker_hub
+    needs: build_and_push_to_docker_hub
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
-        env:
-          SSH_KEY: ${{ secrets.SSH_KEY }}
         with:
-          host: 159.223.208.222
-          username: root
-          key: |
-            ${{ env.SSH_KEY }}
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
           script: |
-            whoami
-            #sudo docker pull ${{ secrets.DOCKER_USERNAME }}/infra_yam:latest
-            #sudo docker stop $(sudo docker ps -a -q)
-            #sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/infra_yam:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/infra_yam:latest
+            sudo docker stop $(sudo docker ps -a -q)
+            sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/infra_yam:latest
