Added step of deploy to workflow

--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -65,6 +65,11 @@ jobs:
             # sudo docker stop $(sudo docker ps -a -q)
             # sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/infra_yam:latest
             
+            rm -rf yamdb_final
+            git clone git@github.com:whodef/yamdb_final.git
+            cd yamdb_final/infra
+
+            
             sudo docker-compose stop
             sudo docker-compose rm web
             
