Added step of deploy to workflow

--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -8,7 +8,7 @@ RUN pip3 install -r ./requirements.txt --no-cache-dir
 
 COPY . .
 
-RUN python manage.py collectstatic --no-input
+RUN python3 manage.py collectstatic --no-input
 
 CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
 
@@ -18,10 +18,7 @@ FROM nginx:1.21.3-alpine as nginx
 
 COPY --from=app /app/static /var/html/static
 
-COPY --from=app /app/media /var/html/media
-
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
 RUN ls -lah /var/html/static
 
-RUN ls -lah /var/html/media
