--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -55,7 +55,7 @@ jobs:
   build_and_push_nginx_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    needs: tests
+    needs: build_and_push_app_to_docker_hub
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
