--- a/infra/docker-compose.prod.yaml
+++ b/infra/docker-compose.prod.yaml
@@ -9,17 +9,26 @@ services:
       - ./.env
   web:
     image: whodef/infra_yam:latest
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
     depends_on:
       - db
     env_file:
       - ./.env
 
   nginx:
-    image: whodef/infra_yam:nginx-latest
+    image: nginx:1.21.3-alpine
     ports:
       - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
     depends_on:
       - web
 
 volumes:
+  static_value:
+  media_value:
   db_data:
