--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -93,5 +93,8 @@ jobs:
             
             sudo docker-compose -f docker-compose.prod.yaml up -d
             
-            sudo docker-compose -f docker-compose.prod.yaml exec web sh -c 'rm -rf /app/static/* /app/media/*'
-            sudo docker-compose -f docker-compose.prod.yaml exec web python3 manage.py collectstatic --no-input
+            docker exec \
+              -t $(docker-compose -f docker-compose.prod.yaml ps -q web) \
+              sh -c 'rm -rf /app/static/* /app/media/* && python3 manage.py collectstatic --no-input'
+
+
