--- a/infra/docker-compose.prod.yaml
+++ b/infra/docker-compose.prod.yaml
@@ -9,6 +9,8 @@ services:
       - ./.env
   web:
     image: whodef/infra_yam:latest
+    ports:
+      - "5000:5000"
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
