--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -63,8 +63,6 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            
-            set -x
            
             rm -rf yamdb_final
             git clone ${{ secrets.REPOSITORY }}
@@ -97,4 +95,13 @@ jobs:
               -t $(docker-compose -f docker-compose.prod.yaml ps -q web) \
               sh -c 'rm -rf /app/static/* /app/media/* && python3 manage.py collectstatic --no-input'
 
-
+  send_message:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+    - name: send message
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: ${{ github.workflow }} успешно выполнен!
