--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,9 +8,7 @@ services:
     env_file:
       - ./.env
   web:
-    build:
-      dockerfile: ../api_yamdb/Dockerfile
-      context: ../api_yamdb
+    image: whodef/infra_yam:latest
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
