--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -25,10 +25,9 @@ services:
 
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-
       - static_value:/var/html/static/
-
       - media_value:/var/html/media/
+      - ../api_yamdb/templates/redoc.html:/var/html/redoc/redoc.html
 
     depends_on:
       - web
