--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -14,7 +14,7 @@ server {
     }
 
     location /redoc/ {
-        root /var/html/redoc;
+        root /var/html/;
         try_files $uri $uri/redoc.html;
     }
 
