--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -13,6 +13,10 @@ server {
         root /var/html/;
     }
 
+    location /redoc/ {
+        root /var/html/;
+    }
+
     location / {
         proxy_pass http://web:8000;
     }
