--- a/.gitignore
+++ b/.gitignore
@@ -146,7 +146,11 @@ dmypy.json
 .mypy_cache
 
 # папки со статикой и медиа
-static/
+static/data/
+static/*
+!static/redoc.yaml
+
+
 posts/static/
 media/
 
